2008-11-12 Jim Garlick <garlick@llnl.gov>

	* etc/powerman.conf.example : Renamed from powerman.conf.

2008-11-11 Jim Garlick <garlick@llnl.gov>

	* parse_util.c : Declare config invalid if no nodes are defined.

	* etc/ibmh8.dev : Removed.

008-11-07 Jim Garlick <garlick@llnl.gov>

	* src/parse_tab.y : Relax order of types of config entries.

	* etc/powerman.conf : Config file example.

2008-11-06 Jim Garlick <garlick@llnl.gov>

	* scripts/powerman.init.in : Replace old powerman.init
	with Chris Dunlap's portable init script (lifted fron ConMan).

	* powerman.spec : Make crufty %post, %preun, %postun scripts
	look more like ConMan's.

2008-11-05 Jim Garlick <garlick@llnl.gov>

	* scripts/Makefile.am : Fix a typo in install command
	line that broke on Solaris.

2008-11-04 Jim Garlick <garlick@llnl.gov>

	* src/device.c : Fix memory leak [Scott Burns].

	* etc/cyclades-pm20.dev : New [Scott Burns].

	* etc/cyclades-pm[8,10,42].dev : Added temp script [Scott Burns].

	* test/t46, test/cyclades.c : Added PM20.

2008-11-03 Jim Garlick <garlick@llnl.gov>

	* test/vpcd.c : Fix logic error.

2008-10-26 Jim Garlick <garlick@llnl.gov>

	* test/vpcd.c : Add -p port option and code to accept a connection
	on the specified socket.

	* test/t48 : Simple test using socket between powermand and vpcd.

	* src/powermand.c, src/client.[ch] : Added --one-client option for 
	testing.

2008-10-22 Jim Garlick <garlick@llnl.gov>

	* src/client.c : Additional changes for IPv6 support.

2008-10-21 Jim Garlick <garlick@llnl.gov>

	* src/client.c, src/powermand.c, src/daemon.c, src/powerman.c,
	src/device_tcp.c : Added preliminary IPv6 support.

2008-10-20 Jim Garlick <garlick@llnl.gov>

	* : tag powerman-2.2.2

	* src/client.c :  Revert change to client.c pending debug (r1039:1049).

	* etc/Makefile.am : Add cyclades-pm42.dev to installed dev scripts.

2008-10-15 Jim Garlick <garlick@llnl.gov>

	* src/client.c : Use getaddrinfo() instead of gethostbyaddr()
	to prepare for ipv6 support.
